Fixed z-index for modal-overlay (#1449)

--- a/js/app.less
+++ b/js/app.less
@@ -20,7 +20,7 @@
     flex-grow: 1;
     overflow: auto;
   }
-  
+
   &__menu {
     padding: 0px;
     margin-bottom: 0px;
@@ -50,11 +50,11 @@
       padding: 10px 7px;
       font-size: 1.4rem;
       text-decoration: none;
-      
+
       &:focus, &:hover, &--selected {
         background-color: #005471 !important;
       }
-      
+
       &:last-child {
         border-bottom: none;
       }
@@ -67,9 +67,10 @@
         padding: 5px 5px;
       }
     }
-  } 
+  }
 }
 
 .modal-backdrop {
   height: 100%;
+  z-index: 2;
 }
